--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,30 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body{
+  background-color: black;
   color: white;
 }
 
-.App-link {
-  color: #09d3ac;
+.container {
+  text-align: center;
+  
+}
+
+#box{
+  height:100px;
+  width: 100px;
+  border: 1px solid white;
+  display: inline-block;
+ 
+}
+
+#board{
+  display: inline-flex;
+  flex-wrap: wrap;
+  width: 320px;
+  line-height: 94px;
+  font-size: 32px;
+  font-weight: bold;
+}
+
+.formClass{
+padding: 30px;
 }
