--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,8 @@ body{
   width: 100px;
   border: 1px solid white;
   display: inline-block;
- 
+  font-size: 45px;
+
 }
 
 #board{
@@ -27,4 +28,20 @@ body{
 
 .formClass{
 padding: 30px;
+}
+
+#box:nth-child(7), #box:nth-child(8), #box:nth-child(9) {
+  border-bottom: 0;
+}
+
+#box:nth-child(1), #box:nth-child(2), #box:nth-child(3) {
+  border-top: 0;
+}
+
+#box:nth-child(3n+1) {
+  border-left: 0;
+}
+
+#box:nth-child(3n) {
+  border-right: 0;
 }
